--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     "react": "^16.14.0",
     "react-bootstrap": "^2.2.3",
     "react-dom": "^16.14.0",
-    "react-router-dom": "^6.0.2"
+    "react-router-dom": "^6.0.2",
+    "redux": "^4.1.2",
+    "video-react": "^0.15.0"
   }
 }
